# web-scraper-ai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tasks.py
api/: __init__.py  dependencies.py  main.py  models.py
api/routes/: __init__.py  exports.py  jobs.py  monitoring.py  scrapers.py
config/: __init__.py  celery.py  database.py  settings.py
docs/: 01_TaskVision.md  02_ProductRequirementsDocument.md  03_SoftwareRequirementsSpecification.md  04_MVPDefinition.md  05_TechnicalDesignDocument.md  06_SystemArchitecture.md  07_UI_UX_Design.md  08_DatabaseDesign.md  09_API_Documentation.md  10_TestPlan_TestCases.md  11_DeploymentGuide.md  12_UserManual.md  13_Maintenance_FutureScope.md
examples/: __init__.py  multi_level_scraper.py
exporters/: __init__.py  base.py  csv_exporter.py  excel_exporter.py  factory.py  json_exporter.py
frontends/: __init__.py  index.html
frontends/css/: dashboard.css
frontends/js/: dashboard.js
jobs/: __init__.py  manager.py  models.py
k8s/: deployment.yaml
processors/: __init__.py  base.py  cleaner.py  pipeline.py  quality.py  transformer.py  validator.py
scrapers/: __init__.py  base.py  config.py  dynamic.py  factory.py  static.py
scripts/: init_db.sql  setup.bat  setup.sh
tests/: __init__.py  test_processors.py  test_scrapers.py
